# src/routes/user.js
@@ -1,14 +1,14 @@
 const express = require("express");
 const router = express.Router();
 const controllers =  require('../controllers/controllers')
-const { userRules, newUser }= require (`../models/user`)
+const { userRules, newUser, resetPasswordRules, loginRules }= require (`../models/user`)
 const {checkSchema} = require('express-validator');
 const {getDataNoResponse} = require (`../libs/firebase`);
  
 router.post('/preregister',checkSchema(userRules),controllers.registerUser);
 router.post('/register',checkSchema(newUser),controllers.preregister);
-router.post('/recovery',controllers.recoveryPassword);
-router.post(`/prueba`, checkSchema(compareData), controllers.compareData)
-// router.post('/login',controllers.login);
+router.post('/recovery',checkSchema(resetPasswordRules),controllers.recoveryPassword);
+//router.post('/prueba', checkSchema(compareData), controllers.compareData)
+router.post('/login', checkSchema(loginRules), controllers.loginUser);
 
 module.exports = router;
